# trip-calculate

./: .env.example  .gitignore  BILINGUAL_EMAIL_EXAMPLE.md  Dockerfile  MAPBOX_SETUP.md  N8N_SETUP.md  README.md  build-and-deploy.sh  docker-compose.yml  pom.xml  test-email.py
.github/: dependabot.yml
.github/workflows/: build-feature.yml  dependabot-auto-merge.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml
agent/: .env.example  Dockerfile  app.py  cost_tracking.py  graph.py  input_shield.py  metrics.py  middleware.py  model_router.py  models.py  persistence.py  pricing.py  pyproject.toml  pytest.ini  requirements.txt  security.py
agent/app/: db.py  geocoding.py  graph.py  main.py  nodes.py  schema.py  streaming.py
agent/app/fetchers/: minfin.py  nbu.py  oil_bulletin.py  refresh.py
agent/app/tools/: fuel.py  weather.py
agent/tests/: conftest.py  test_api.py  test_budget_guard.py  test_cost_tracking.py  test_db.py  test_estimate_car.py  test_fetchers.py  test_fuel_tool.py  test_geocoding.py  test_graph.py  test_input_shield.py  test_jwt.py  test_lifespan.py  test_model_router.py  test_nodes.py  test_pricing.py  test_refresh.py  test_schema_additions.py  test_sse.py  test_streaming.py  test_supervisor.py  test_tools.py  test_weather_tool.py
agent/tools/: __init__.py  estimate_time.py  fuel_price.py  geocode.py  pois_nearby.py  route_osrm.py  weather_forecast.py
docs/: N8N_SETUP.md  SECURITY-AUDIT.md
frontend/: .env.example  I18N_BASELINE.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+336 files in other folders)
